karnc/tests/fixtures/positive/146_cron_simple/src/reaper.karn
context reaper

service sweeper {
  on cron("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
