karnc/tests/fixtures/negative/110_cron_has_params/src/svc.karn
context svc

service sweeper {
  on cron("*/5 * * * *") (n: Int) -> Effect[Result[(), String]] {
    Ok(())
  }
}
